@@ -5,7 +5,7 @@ CREATE INDEX art_jbpmt_ix_jid ON ART_JOBS_PARAMETERS(JOB_ID);
 CREATE INDEX art_lg_ix_dt ON ART_LOGS(LOG_DATE);
 CREATE INDEX art_lg_ix_unm ON ART_LOGS(USERNAME);
 CREATE INDEX art_lg_ix_tp ON ART_LOGS(LOG_TYPE);
-CREATE INDEX art_lg_ix_qid ON ART_LOGS(QUERY_ID);
+CREATE INDEX art_lg_ix_iid ON ART_LOGS(ITEM_ID);
 CREATE INDEX art_lg_ix_tt ON ART_LOGS(TOTAL_TIME);
 CREATE INDEX art_upardf_ix_pdk ON ART_USER_PARAM_DEFAULTS(PARAM_DEFAULT_KEY);
 CREATE INDEX art_upardf_ix_uid_pid ON ART_USER_PARAM_DEFAULTS(USER_ID, PARAMETER_ID);
