@@ -4,6 +4,7 @@
 -- update database version
 -- add json options column
 -- add oauth columns
+-- rename query_id column in art_logs table
 
 
 -- NOTES:
@@ -33,3 +34,8 @@ ALTER TABLE ART_SMTP_SERVERS ADD OAUTH_CLIENT_SECRET VARCHAR(400);
 ALTER TABLE ART_SMTP_SERVERS ADD OAUTH_REFRESH_TOKEN VARCHAR(400);
 ALTER TABLE ART_SMTP_SERVERS ADD OAUTH_ACCESS_TOKEN VARCHAR(400);
 ALTER TABLE ART_SMTP_SERVERS ADD OAUTH_ACCESS_TOKEN_EXPIRY TIMESTAMP;
+
+-- rename query_id column in art_logs table
+ALTER TABLE ART_LOGS ADD ITEM_ID INTEGER;
+UPDATE ART_LOGS SET ITEM_ID=QUERY_ID;
+ALTER TABLE ART_LOGS DROP COLUMN QUERY_ID;
