@@ -54,7 +54,7 @@ CREATE MEMORY TABLE PUBLIC.ART_JOBS_PARAMETERS(JOB_ID INTEGER NOT NULL,PARAM_TYP
 CREATE INDEX JOBS_PARAMS_INDX ON PUBLIC.ART_JOBS_PARAMETERS(JOB_ID)
 CREATE MEMORY TABLE PUBLIC.ART_JOBS_AUDIT(JOB_ID INTEGER NOT NULL,JOB_AUDIT_KEY VARCHAR(100),START_DATE TIMESTAMP,END_DATE TIMESTAMP,USERNAME VARCHAR(50),JOB_ACTION VARCHAR(1),USER_ID INTEGER)
 CREATE INDEX JOBS_AUDIT_INDX ON PUBLIC.ART_JOBS_AUDIT(JOB_ID)
-CREATE MEMORY TABLE PUBLIC.ART_LOGS(USERNAME VARCHAR(50) NOT NULL,IP VARCHAR(50),TOTAL_TIME INTEGER,FETCH_TIME INTEGER,MESSAGE VARCHAR(500),LOG_TYPE VARCHAR(50),QUERY_ID INTEGER,LOG_DATE TIMESTAMP)
+CREATE MEMORY TABLE PUBLIC.ART_LOGS(USERNAME VARCHAR(50) NOT NULL,IP VARCHAR(50),TOTAL_TIME INTEGER,FETCH_TIME INTEGER,MESSAGE VARCHAR(500),LOG_TYPE VARCHAR(50),LOG_DATE TIMESTAMP,ITEM_ID INTEGER)
 CREATE MEMORY TABLE PUBLIC.ART_JOB_SCHEDULES(SCHEDULE_NAME VARCHAR(50) NOT NULL PRIMARY KEY,JOB_MINUTE VARCHAR(100),JOB_HOUR VARCHAR(100),JOB_DAY VARCHAR(100),JOB_MONTH VARCHAR(100),JOB_WEEKDAY VARCHAR(100),CREATION_DATE TIMESTAMP,UPDATE_DATE TIMESTAMP,CREATED_BY VARCHAR(50),UPDATED_BY VARCHAR(50),SCHEDULE_ID INTEGER,DESCRIPTION VARCHAR(200),EXTRA_SCHEDULES VARCHAR(16777216),HOLIDAYS VARCHAR(16777216),JOB_SECOND VARCHAR(100),JOB_YEAR VARCHAR(100),TIME_ZONE VARCHAR(50))
 CREATE MEMORY TABLE PUBLIC.ART_USER_GROUPS(USER_GROUP_ID INTEGER NOT NULL PRIMARY KEY,NAME VARCHAR(50) NOT NULL,DESCRIPTION VARCHAR(200),DEFAULT_QUERY_GROUP INTEGER,START_QUERY VARCHAR(500),CREATION_DATE TIMESTAMP,UPDATE_DATE TIMESTAMP,CREATED_BY VARCHAR(50),UPDATED_BY VARCHAR(50))
 CREATE MEMORY TABLE PUBLIC.ART_USER_GROUP_ASSIGNMENT(USERNAME VARCHAR(50) NOT NULL,USER_GROUP_ID INTEGER NOT NULL,USER_ID INTEGER,PRIMARY KEY(USERNAME,USER_GROUP_ID))
@@ -701,13 +701,13 @@ INSERT INTO ART_JOBS VALUES(10,81,'admin','--','','admin@localhost.local','','',
 INSERT INTO ART_JOBS VALUES(11,82,'admin','--','','admin@localhost.local','','','Fixed Width 3-2019_02_05-17_53_20_754-MZ6iz-82-11.html','2019-02-05 17:53:20.660000','2019-02-05 17:53:21.858000','2020-01-31 23:00:00.000000','2017-02-17 10:46:22.478000',NULL,NULL,'','Fixed Width 3','0','23','L','1','?','','',NULL,0,1,1,'2017-02-17 10:46:22.479000',NULL,'admin',NULL,'Publish','','',0,0,0,0,'',0,'',NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL)
 INSERT INTO ART_JOBS_AUDIT VALUES(3,'6f45f634-3c4b-464f-8952-967f30a27c71','2012-06-03 15:35:00.676000','2012-06-03 15:35:01.397000','admin','E',NULL)
 INSERT INTO ART_JOBS_AUDIT VALUES(3,'debb1070-88ef-490e-8d00-8716a1bea445','2012-06-03 15:35:36.512000','2012-06-03 15:35:36.940000','admin','E',NULL)
-INSERT INTO ART_LOGS VALUES('initial setup','0:0:0:0:0:0:0:1',NULL,NULL,NULL,'logout',NULL,'2019-02-11 12:19:43.452000')
-INSERT INTO ART_LOGS VALUES('auser','0:0:0:0:0:0:0:1',NULL,NULL,'Internal','login',NULL,'2019-02-11 12:19:53.919000')
-INSERT INTO ART_LOGS VALUES('auser','0:0:0:0:0:0:0:1',2,0,'htmlDataTable, regionId: East (4),startDate: 2010-01-01,endDate: 2019-02-11','report',6,'2019-02-11 12:20:11.527000')
-INSERT INTO ART_LOGS VALUES('auser','0:0:0:0:0:0:0:1',NULL,NULL,NULL,'logout',NULL,'2019-02-11 12:20:20.309000')
-INSERT INTO ART_LOGS VALUES('admin','0:0:0:0:0:0:0:1',NULL,NULL,'Internal','login',NULL,'2019-02-11 12:20:25.301000')
-INSERT INTO ART_LOGS VALUES('admin','0:0:0:0:0:0:0:1',NULL,NULL,NULL,'logout',NULL,'2019-02-11 12:20:40.132000')
-INSERT INTO ART_LOGS VALUES('initial setup','0:0:0:0:0:0:0:1',NULL,NULL,NULL,'logout',NULL,'2019-02-20 16:30:19.516000')
+INSERT INTO ART_LOGS VALUES('initial setup','0:0:0:0:0:0:0:1',NULL,NULL,NULL,'logout','2019-02-11 12:19:43.452000',NULL)
+INSERT INTO ART_LOGS VALUES('auser','0:0:0:0:0:0:0:1',NULL,NULL,'Internal','login','2019-02-11 12:19:53.919000',NULL)
+INSERT INTO ART_LOGS VALUES('auser','0:0:0:0:0:0:0:1',2,0,'htmlDataTable, regionId: East (4),startDate: 2010-01-01,endDate: 2019-02-11','report','2019-02-11 12:20:11.527000',6)
+INSERT INTO ART_LOGS VALUES('auser','0:0:0:0:0:0:0:1',NULL,NULL,NULL,'logout','2019-02-11 12:20:20.309000',NULL)
+INSERT INTO ART_LOGS VALUES('admin','0:0:0:0:0:0:0:1',NULL,NULL,'Internal','login','2019-02-11 12:20:25.301000',NULL)
+INSERT INTO ART_LOGS VALUES('admin','0:0:0:0:0:0:0:1',NULL,NULL,NULL,'logout','2019-02-11 12:20:40.132000',NULL)
+INSERT INTO ART_LOGS VALUES('initial setup','0:0:0:0:0:0:0:1',NULL,NULL,NULL,'logout','2019-02-20 16:30:19.516000',NULL)
 INSERT INTO ART_JOB_SCHEDULES VALUES('Last Day of Every Month','0','23','L','*','?',NULL,NULL,NULL,NULL,1,NULL,NULL,NULL,NULL,NULL,NULL)
 INSERT INTO ART_USER_GROUPS VALUES(2,'Art Demo User Goup','user in this group can access all the demo queries',NULL,NULL,NULL,NULL,NULL,NULL)
 INSERT INTO ART_USER_GROUP_ASSIGNMENT VALUES('admin',2,1)
