@@ -3,6 +3,8 @@ ART 4.3
 * Removed pdf export by default for htmlDataTable report format
 * Enable use of oauth with gmail smtp server
 * Allow use of clear text password when loading art-database.json file
+* Log job runs to the art_logs table
+* Renamed query_id column in art_logs table to item_id
 * Updated poi, jxls, jasperreports, xdocreports
 
 ART 4.2
